--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 
 <style>
-/* ============ COLORS & ROOT ============ */
+/* ==================== VARIABLES ==================== */
 :root{
   --bg:#B2AEA2;
   --fg:#1f1f1f;
@@ -16,18 +16,13 @@
   --gold:#1f1f1f;
 }
 
-/* ============ GLOBAL ============ */
+/* ==================== GLOBAL RESET ==================== */
 *{margin:0;padding:0;box-sizing:border-box;}
 html{scroll-behavior:smooth;}
-body{
-  font-family:Poppins,sans-serif;
-  background:var(--bg);
-  color:var(--fg);
-  transition:.4s;
-}
+body{font-family:Poppins,sans-serif;background:var(--bg);color:var(--fg);transition:.4s;}
 a{text-decoration:none;}
 
-/* ============ HEADER ============ */
+/* ==================== HEADER / NAV ==================== */
 header{
   position:fixed;top:0;left:0;width:100%;
   backdrop-filter:blur(14px);
@@ -43,16 +38,8 @@ nav{
   justify-content:space-between;
   padding:16px 24px;
 }
-nav h1{
-  font-family:"Playfair Display",serif;
-  letter-spacing:4px;
-  color:var(--fg);
-}
-nav a{
-  color:var(--fg);
-  margin-left:22px;
-  opacity:.9;
-}
+nav h1{font-family:"Playfair Display",serif; letter-spacing:4px; color:var(--fg);}
+nav a{color:var(--fg); margin-left:22px; opacity:.9;}
 nav a:hover{opacity:1;}
 .toggle{
   background:none;
@@ -63,25 +50,36 @@ nav a:hover{opacity:1;}
   margin-left:16px;
 }
 
-/* ============ HERO ============ */
+/* ==================== HERO ==================== */
 .hero{
   min-height:100vh;
   display:grid;
   place-items:center;
   text-align:center;
   background:radial-gradient(80% 50% at 50% 10%,#c9c4b6,transparent);
+  background-attachment:fixed; /* Parallax effect */
 }
 .hero h2{
   font-family:"Playfair Display",serif;
   font-size:64px;
   letter-spacing:6px;
+  opacity:0;
+  transform:translateY(40px);
+  transition:1s ease;
 }
 .hero p{
   max-width:600px;
   margin:18px auto;
+  opacity:0;
+  transform:translateY(40px);
+  transition:1s ease 0.3s;
+}
+.hero.show h2,.hero.show p{
+  opacity:1;
+  transform:translateY(0);
 }
 
-/* ============ BUTTON ============ */
+/* ==================== BUTTON ==================== */
 .btn{
   display:inline-block;
   padding:14px 36px;
@@ -89,13 +87,14 @@ nav a:hover{opacity:1;}
   color:var(--fg);
   border-radius:50px;
   transition:.4s;
+  margin-top:16px;
 }
 .btn:hover{
   background:var(--fg);
-  color:#fff;
+  color:white;
 }
 
-/* ============ SECTIONS ============ */
+/* ==================== SECTIONS ==================== */
 section{
   max-width:1200px;
   margin:auto;
@@ -108,7 +107,7 @@ h3{
   margin-bottom:50px;
 }
 
-/* ============ CARDS ============ */
+/* ==================== CARDS ==================== */
 .grid{
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
@@ -120,6 +119,8 @@ h3{
   border-radius:20px;
   padding:32px;
   transition:.6s ease;
+  opacity:0;
+  transform:translateY(40px);
 }
 .card:hover{
   transform:translateY(-12px) scale(1.03);
@@ -133,7 +134,7 @@ h3{
 }
 .card img:hover{transform:scale(1.05);}
 
-/* ============ CAROUSEL ============ */
+/* ==================== CAROUSEL ==================== */
 .carousel{
   display:flex;
   gap:28px;
@@ -142,7 +143,7 @@ h3{
 }
 .carousel::-webkit-scrollbar{display:none;}
 
-/* ============ FLOAT BUTTONS ============ */
+/* ==================== FLOAT BUTTONS ==================== */
 .float{
   position:fixed;
   bottom:22px;
@@ -158,20 +159,19 @@ h3{
 .whatsapp{right:22px;background:#25D366;}
 .insta{right:90px;background:linear-gradient(45deg,#833ab4,#fd1d1d,#fcb045);}
 
-/* ============ FOOTER ============ */
+/* ==================== FOOTER ==================== */
 footer{
   text-align:center;
   padding:40px;
   background:var(--card);
 }
 
-/* ============ DARK MODE ============ */
+/* ==================== DARK MODE ==================== */
 body.dark{
   background:#0b0b0b;
   color:white;
 }
-body.dark nav,
-body.dark header{
+body.dark nav,body.dark header{
   background:#111;
 }
 body.dark .hero{
@@ -182,16 +182,9 @@ body.dark .btn{
   color:white;
 }
 
-/* ============ FADE ANIMATION ============ */
-.fade{
-  opacity:0;
-  transform:translateY(40px);
-  transition:1s ease;
-}
-.fade.show{
-  opacity:1;
-  transform:translateY(0);
-}
+/* ==================== FADE ANIMATIONS ==================== */
+.fade{opacity:0; transform:translateY(40px); transition:1s ease;}
+.fade.show{opacity:1; transform:translateY(0);}
 </style>
 </head>
 
@@ -225,7 +218,7 @@ body.dark .btn{
 <!-- Services Section -->
 <section id="services">
 <h3>Our Services</h3>
-<div class="grid fade">
+<div class="grid">
 <div class="card">Luxury Logo Design</div>
 <div class="card">Instagram Branding</div>
 <div class="card">Digital Art</div>
@@ -236,7 +229,7 @@ body.dark .btn{
 <!-- Art Gallery Section -->
 <section id="art">
 <h3>Art Gallery</h3>
-<div class="carousel fade">
+<div class="carousel">
 <div class="card"><img src="drawing1.jpg" alt="Art 1"></div>
 <div class="card"><img src="drawing2.jpg" alt="Art 2"></div>
 <div class="card"><img src="drawing3.jpg" alt="Art 3"></div>
@@ -245,7 +238,7 @@ body.dark .btn{
 </section>
 
 <!-- Contact Section -->
-<section id="contact" class="fade">
+<section id="contact">
 <h3>Contact Global Art</h3>
 <p>WhatsApp: 7378272741</p>
 <p>Instagram: mystivated66</p>
@@ -254,25 +247,41 @@ body.dark .btn{
 <footer>© 2026 Global Art</footer>
 
 <script>
-/* ---------- DARK MODE TOGGLE ---------- */
+/* ========= DARK MODE TOGGLE ========= */
 const btn = document.createElement("button");
 btn.innerText = "🌓";
 btn.className = "toggle";
 document.querySelector("nav div").appendChild(btn);
-btn.onclick = () => {
-  document.body.classList.toggle("dark");
-};
+btn.onclick = () => document.body.classList.toggle("dark");
 
-/* ---------- FADE ON SCROLL ---------- */
-const faders = document.querySelectorAll('.fade, .hero');
-const observer = new IntersectionObserver(entries => {
-  entries.forEach(entry => {
-    if(entry.isIntersecting){
-      entry.target.classList.add('show');
-    }
+/* ========= FADE-IN ANIMATION ========= */
+const faders = document.querySelectorAll('.hero, .card');
+const observer = new IntersectionObserver(entries=>{
+  entries.forEach(entry=>{
+    if(entry.isIntersecting){entry.target.classList.add('show');}
   });
 });
-faders.forEach(el => observer.observe(el));
+faders.forEach(el=>observer.observe(el));
+
+/* ========= IMAGE POPUP ========= */
+const cards = document.querySelectorAll('.card img');
+cards.forEach(img=>{
+  img.addEventListener('click',()=>{
+    const popup = document.createElement('div');
+    popup.style.position='fixed';
+    popup.style.top='0';popup.style.left='0';
+    popup.style.width='100%';popup.style.height='100%';
+    popup.style.background='rgba(0,0,0,0.85)';
+    popup.style.display='flex';popup.style.alignItems='center';popup.style.justifyContent='center';
+    popup.style.zIndex='9999';
+    const popImg=document.createElement('img');
+    popImg.src=img.src; popImg.style.maxWidth='90%'; popImg.style.maxHeight='90%';
+    popImg.style.borderRadius='16px';
+    popup.appendChild(popImg);
+    popup.addEventListener('click',()=>popup.remove());
+    document.body.appendChild(popup);
+  });
+});
 </script>
 
 </body>
