Enhance services and art gallery sections with details
Added new section text and improved card details in the services and art gallery sections.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 
 <style>
-/* ==================== VARIABLES ==================== */
 :root{
   --bg:#B2AEA2;
   --fg:#1f1f1f;
@@ -16,13 +15,11 @@
   --gold:#1f1f1f;
 }
 
-/* ==================== GLOBAL RESET ==================== */
 *{margin:0;padding:0;box-sizing:border-box;}
 html{scroll-behavior:smooth;}
 body{font-family:Poppins,sans-serif;background:var(--bg);color:var(--fg);transition:.4s;}
 a{text-decoration:none;}
 
-/* ==================== HEADER / NAV ==================== */
 header{
   position:fixed;top:0;left:0;width:100%;
   backdrop-filter:blur(14px);
@@ -50,14 +47,13 @@ nav a:hover{opacity:1;}
   margin-left:16px;
 }
 
-/* ==================== HERO ==================== */
 .hero{
   min-height:100vh;
   display:grid;
   place-items:center;
   text-align:center;
   background:radial-gradient(80% 50% at 50% 10%,#c9c4b6,transparent);
-  background-attachment:fixed; /* Parallax effect */
+  background-attachment:fixed;
 }
 .hero h2{
   font-family:"Playfair Display",serif;
@@ -79,7 +75,6 @@ nav a:hover{opacity:1;}
   transform:translateY(0);
 }
 
-/* ==================== BUTTON ==================== */
 .btn{
   display:inline-block;
   padding:14px 36px;
@@ -94,7 +89,6 @@ nav a:hover{opacity:1;}
   color:white;
 }
 
-/* ==================== SECTIONS ==================== */
 section{
   max-width:1200px;
   margin:auto;
@@ -104,10 +98,15 @@ section{
 h3{
   font-family:"Playfair Display",serif;
   letter-spacing:4px;
-  margin-bottom:50px;
+  margin-bottom:30px;
+}
+.section-text{
+  max-width:800px;
+  margin:16px auto 50px;
+  font-size:16px;
+  color:var(--fg);
 }
 
-/* ==================== CARDS ==================== */
 .grid{
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
@@ -134,7 +133,6 @@ h3{
 }
 .card img:hover{transform:scale(1.05);}
 
-/* ==================== CAROUSEL ==================== */
 .carousel{
   display:flex;
   gap:28px;
@@ -143,7 +141,6 @@ h3{
 }
 .carousel::-webkit-scrollbar{display:none;}
 
-/* ==================== FLOAT BUTTONS ==================== */
 .float{
   position:fixed;
   bottom:22px;
@@ -159,14 +156,12 @@ h3{
 .whatsapp{right:22px;background:#25D366;}
 .insta{right:90px;background:linear-gradient(45deg,#833ab4,#fd1d1d,#fcb045);}
 
-/* ==================== FOOTER ==================== */
 footer{
   text-align:center;
   padding:40px;
   background:var(--card);
 }
 
-/* ==================== DARK MODE ==================== */
 body.dark{
   background:#0b0b0b;
   color:white;
@@ -182,7 +177,6 @@ body.dark .btn{
   color:white;
 }
 
-/* ==================== FADE ANIMATIONS ==================== */
 .fade{opacity:0; transform:translateY(40px); transition:1s ease;}
 .fade.show{opacity:1; transform:translateY(0);}
 </style>
@@ -190,7 +184,6 @@ body.dark .btn{
 
 <body>
 
-<!-- Floating Buttons -->
 <a href="https://wa.me/917378272741" class="float whatsapp">💬</a>
 <a href="https://www.instagram.com/mystivated66" class="float insta">📷</a>
 
@@ -206,7 +199,6 @@ body.dark .btn{
 </nav>
 </header>
 
-<!-- Hero Section -->
 <div class="hero" id="home">
 <div>
 <h2>GLOBAL ART</h2>
@@ -215,20 +207,32 @@ body.dark .btn{
 </div>
 </div>
 
-<!-- Services Section -->
 <section id="services">
 <h3>Our Services</h3>
+<p class="section-text">We provide high-end creative solutions for brands that want to stand out. Explore our services below.</p>
 <div class="grid">
-<div class="card">Luxury Logo Design</div>
-<div class="card">Instagram Branding</div>
-<div class="card">Digital Art</div>
-<div class="card">Premium Posters</div>
+<div class="card">
+<h4>Luxury Logo Design</h4>
+<p>Create premium logos that make your brand unforgettable.</p>
+</div>
+<div class="card">
+<h4>Instagram Branding</h4>
+<p>Modern Instagram designs to elevate your brand presence.</p>
+</div>
+<div class="card">
+<h4>Digital Art</h4>
+<p>Unique digital art tailored to your style and vision.</p>
+</div>
+<div class="card">
+<h4>Premium Posters</h4>
+<p>High-quality posters perfect for display or marketing.</p>
+</div>
 </div>
 </section>
 
-<!-- Art Gallery Section -->
 <section id="art">
 <h3>Art Gallery</h3>
+<p class="section-text">Explore our exclusive art collection. Click on any artwork to view in full screen and contact us for purchases via WhatsApp.</p>
 <div class="carousel">
 <div class="card"><img src="drawing1.jpg" alt="Art 1"></div>
 <div class="card"><img src="drawing2.jpg" alt="Art 2"></div>
@@ -237,7 +241,6 @@ body.dark .btn{
 </div>
 </section>
 
-<!-- Contact Section -->
 <section id="contact">
 <h3>Contact Global Art</h3>
 <p>WhatsApp: 7378272741</p>
@@ -247,14 +250,12 @@ body.dark .btn{
 <footer>© 2026 Global Art</footer>
 
 <script>
-/* ========= DARK MODE TOGGLE ========= */
 const btn = document.createElement("button");
 btn.innerText = "🌓";
 btn.className = "toggle";
 document.querySelector("nav div").appendChild(btn);
 btn.onclick = () => document.body.classList.toggle("dark");
 
-/* ========= FADE-IN ANIMATION ========= */
 const faders = document.querySelectorAll('.hero, .card');
 const observer = new IntersectionObserver(entries=>{
   entries.forEach(entry=>{
@@ -263,7 +264,6 @@ const observer = new IntersectionObserver(entries=>{
 });
 faders.forEach(el=>observer.observe(el));
 
-/* ========= IMAGE POPUP ========= */
 const cards = document.querySelectorAll('.card img');
 cards.forEach(img=>{
   img.addEventListener('click',()=>{
@@ -285,4 +285,4 @@ cards.forEach(img=>{
 </script>
 
 </body>
-  </html>
+                    </html>
