--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
+<meta charset="UTF-8">
 <title>Global Art — Luxury Creative Studio</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 
 <style>
@@ -20,168 +19,57 @@ html{scroll-behavior:smooth;}
 body{font-family:Poppins,sans-serif;background:var(--bg);color:var(--fg);transition:.4s;}
 a{text-decoration:none;}
 
-header{
-  position:fixed;top:0;left:0;width:100%;
-  backdrop-filter:blur(14px);
-  background:rgba(178,174,162,.85);
-  z-index:999;
-  box-shadow:0 10px 40px rgba(0,0,0,.15);
-}
-nav{
-  max-width:1200px;
-  margin:auto;
-  display:flex;
-  align-items:center;
-  justify-content:space-between;
-  padding:16px 24px;
-}
+header{position:fixed;top:0;left:0;width:100%;backdrop-filter:blur(14px);background:rgba(178,174,162,.85);z-index:999;box-shadow:0 10px 40px rgba(0,0,0,.15);}
+nav{max-width:1200px;margin:auto;display:flex;align-items:center;justify-content:space-between;padding:16px 24px;}
 nav h1{font-family:"Playfair Display",serif; letter-spacing:4px; color:var(--fg);}
 nav a{color:var(--fg); margin-left:22px; opacity:.9;}
 nav a:hover{opacity:1;}
-.toggle{
-  background:none;
-  border:1px solid var(--fg);
-  padding:6px 14px;
-  border-radius:20px;
-  cursor:pointer;
-  margin-left:16px;
-}
+.toggle{background:none;border:1px solid var(--fg);padding:6px 14px;border-radius:20px;cursor:pointer;margin-left:16px;}
 
-.hero{
-  min-height:100vh;
-  display:grid;
-  place-items:center;
-  text-align:center;
-  background:radial-gradient(80% 50% at 50% 10%,#c9c4b6,transparent);
-  background-attachment:fixed;
-}
-.hero h2{
-  font-family:"Playfair Display",serif;
-  font-size:64px;
-  letter-spacing:6px;
-  opacity:0;
-  transform:translateY(40px);
-  transition:1s ease;
-}
-.hero p{
-  max-width:600px;
-  margin:18px auto;
-  opacity:0;
-  transform:translateY(40px);
-  transition:1s ease 0.3s;
-}
-.hero.show h2,.hero.show p{
-  opacity:1;
-  transform:translateY(0);
-}
+.hero{min-height:100vh;display:grid;place-items:center;text-align:center;background:radial-gradient(80% 50% at 50% 10%,#c9c4b6,transparent);background-attachment:fixed;}
+.hero h2{font-family:"Playfair Display",serif;font-size:64px;letter-spacing:6px;opacity:0;transform:translateY(40px);transition:1s ease;}
+.hero p{max-width:600px;margin:18px auto;opacity:0;transform:translateY(40px);transition:1s ease 0.3s;}
+.hero.show h2,.hero.show p{opacity:1;transform:translateY(0);}
 
-.btn{
-  display:inline-block;
-  padding:14px 36px;
-  border:1px solid var(--fg);
-  color:var(--fg);
-  border-radius:50px;
-  transition:.4s;
-  margin-top:16px;
-}
-.btn:hover{
-  background:var(--fg);
-  color:white;
-}
+.btn{display:inline-block;padding:14px 36px;border:1px solid var(--fg);color:var(--fg);border-radius:50px;transition:.4s;margin-top:16px;}
+.btn:hover{background:var(--fg);color:white;}
 
-section{
-  max-width:1200px;
-  margin:auto;
-  padding:120px 20px;
-  text-align:center;
-}
-h3{
-  font-family:"Playfair Display",serif;
-  letter-spacing:4px;
-  margin-bottom:30px;
-}
-.section-text{
-  max-width:800px;
-  margin:16px auto 50px;
-  font-size:16px;
-  color:var(--fg);
-}
+section{max-width:1200px;margin:auto;padding:120px 20px;text-align:center;}
+h3{font-family:"Playfair Display",serif;letter-spacing:4px;margin-bottom:30px;}
+.section-text{max-width:800px;margin:16px auto 50px;font-size:16px;color:var(--fg);}
 
-.grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
-  gap:28px;
-}
-.card{
-  background:rgba(255,255,255,.08);
-  backdrop-filter:blur(10px);
-  border-radius:20px;
-  padding:32px;
-  transition:.6s ease;
-  opacity:0;
-  transform:translateY(40px);
-}
-.card:hover{
-  transform:translateY(-12px) scale(1.03);
-  box-shadow:0 30px 60px rgba(0,0,0,.2);
-}
-.card img{
-  width:100%;
-  border-radius:16px;
-  cursor:pointer;
-  transition:.4s;
-}
+.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:28px;}
+.card{background:rgba(255,255,255,.08);backdrop-filter:blur(10px);border-radius:20px;padding:32px;transition:.6s ease;opacity:0;transform:translateY(40px);}
+.card:hover{transform:translateY(-12px) scale(1.03);box-shadow:0 30px 60px rgba(0,0,0,.2);}
+.card img{width:100%;border-radius:16px;cursor:pointer;transition:.4s;}
 .card img:hover{transform:scale(1.05);}
 
-.carousel{
-  display:flex;
-  gap:28px;
-  overflow-x:auto;
-  padding-bottom:20px;
-}
+.carousel{display:flex;gap:28px;overflow-x:auto;padding-bottom:20px;}
 .carousel::-webkit-scrollbar{display:none;}
 
-.float{
-  position:fixed;
-  bottom:22px;
-  width:56px;
-  height:56px;
-  border-radius:50%;
-  display:grid;
-  place-items:center;
-  font-size:26px;
-  color:#fff;
-  z-index:999;
-}
+.float{position:fixed;bottom:22px;width:56px;height:56px;border-radius:50%;display:grid;place-items:center;font-size:26px;color:#fff;z-index:999;}
 .whatsapp{right:22px;background:#25D366;}
 .insta{right:90px;background:linear-gradient(45deg,#833ab4,#fd1d1d,#fcb045);}
 
-footer{
-  text-align:center;
-  padding:40px;
-  background:var(--card);
-}
-
-body.dark{
-  background:#0b0b0b;
-  color:white;
-}
-body.dark nav,body.dark header{
-  background:#111;
-}
-body.dark .hero{
-  background:#0b0b0b;
-}
-body.dark .btn{
-  border-color:white;
-  color:white;
-}
-
+footer{text-align:center;padding:40px;background:var(--card);}
+body.dark{background:#0b0b0b;color:white;}
+body.dark nav,body.dark header{background:#111;}
+body.dark .hero{background:#0b0b0b;}
+body.dark .btn{border-color:white;color:white;}
 .fade{opacity:0; transform:translateY(40px); transition:1s ease;}
 .fade.show{opacity:1; transform:translateY(0);}
+
+/* ART OVERLAY BUTTONS */
+.art-overlay{position:relative;}
+.art-overlay .btn-group{
+  position:absolute;bottom:16px;left:50%;transform:translateX(-50%);display:flex;gap:12px;opacity:0;transition:.3s;
+}
+.art-overlay:hover .btn-group{opacity:1;}
+.art-overlay .price-tag{
+  position:absolute;top:16px;right:16px;background:var(--fg);color:white;padding:6px 12px;border-radius:12px;font-weight:bold;
+}
 </style>
 </head>
-
 <body>
 
 <a href="https://wa.me/917378272741" class="float whatsapp">💬</a>
@@ -232,12 +120,32 @@ body.dark .btn{
 
 <section id="art">
 <h3>Art Gallery</h3>
-<p class="section-text">Explore our exclusive art collection. Click on any artwork to view in full screen and contact us for purchases via WhatsApp.</p>
+<p class="section-text">Explore our exclusive art collection. Click on any artwork to view in full screen or buy via WhatsApp/PayPal.</p>
 <div class="carousel">
-<div class="card"><img src="drawing1.jpg" alt="Art 1"></div>
-<div class="card"><img src="drawing2.jpg" alt="Art 2"></div>
-<div class="card"><img src="drawing3.jpg" alt="Art 3"></div>
-<div class="card"><img src="drawing4.jpg" alt="Art 4"></div>
+<div class="card art-overlay">
+<img src="drawing1.jpg" alt="Sunset Dreams">
+<div class="price-tag">₹500</div>
+<div class="btn-group">
+<a href="https://wa.me/917378272741?text=Hi%20I%20want%20to%20buy%20Sunset%20Dreams" class="btn" target="_blank">WhatsApp</a>
+<a href="https://www.paypal.com/paypalme/YOURPAYPALID/500" class="btn" target="_blank">PayPal</a>
+</div>
+</div>
+<div class="card art-overlay">
+<img src="drawing2.jpg" alt="Golden Horizon">
+<div class="price-tag">₹700</div>
+<div class="btn-group">
+<a href="https://wa.me/917378272741?text=Hi%20I%20want%20to%20buy%20Golden%20Horizon" class="btn" target="_blank">WhatsApp</a>
+<a href="https://www.paypal.com/paypalme/YOURPAYPALID/700" class="btn" target="_blank">PayPal</a>
+</div>
+</div>
+<div class="card art-overlay">
+<img src="drawing3.jpg" alt="Moonlight Tale">
+<div class="price-tag">₹600</div>
+<div class="btn-group">
+<a href="https://wa.me/917378272741?text=Hi%20I%20want%20to%20buy%20Moonlight%20Tale" class="btn" target="_blank">WhatsApp</a>
+<a href="https://www.paypal.com/paypalme/YOURPAYPALID/600" class="btn" target="_blank">PayPal</a>
+</div>
+</div>
 </div>
 </section>
 
@@ -250,12 +158,14 @@ body.dark .btn{
 <footer>© 2026 Global Art</footer>
 
 <script>
+/* DARK MODE */
 const btn = document.createElement("button");
 btn.innerText = "🌓";
 btn.className = "toggle";
 document.querySelector("nav div").appendChild(btn);
 btn.onclick = () => document.body.classList.toggle("dark");
 
+/* FADE-IN ANIMATION */
 const faders = document.querySelectorAll('.hero, .card');
 const observer = new IntersectionObserver(entries=>{
   entries.forEach(entry=>{
@@ -264,6 +174,7 @@ const observer = new IntersectionObserver(entries=>{
 });
 faders.forEach(el=>observer.observe(el));
 
+/* IMAGE POPUP */
 const cards = document.querySelectorAll('.card img');
 cards.forEach(img=>{
   img.addEventListener('click',()=>{
@@ -285,4 +196,4 @@ cards.forEach(img=>{
 </script>
 
 </body>
-                    </html>
+  </html>
