--- a/index.html
+++ b/index.html
@@ -2,155 +2,214 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Global Art</title>
+<title>Global Art — Luxury Art Store</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Poppins&display=swap" rel="stylesheet">
+<!-- Google Font -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
 :root{
-  --bg:#0b1220;
-  --text:#fdf6e3;
-  --gold:#facc15;
+  --bg-dark:#0b0b0d;
+  --bg-grey:#16161a;
+  --text-light:#f2f2f2;
+  --text-grey:#b3b3b3;
+  --accent:#9e9e9e;
 }
-body{
+
+/* Light mode */
+body.light{
+  --bg-dark:#f4f4f4;
+  --bg-grey:#ffffff;
+  --text-light:#111;
+  --text-grey:#444;
+}
+
+*{
   margin:0;
-  font-family:Poppins;
-  background:var(--bg);
-  color:var(--text);
-  transition:.4s;
+  padding:0;
+  box-sizing:border-box;
+  font-family:'Poppins',sans-serif;
+  scroll-behavior:smooth;
 }
-.light{
-  --bg:#fdf6e3;
-  --text:#0b1220;
+
+body{
+  background:linear-gradient(180deg,var(--bg-dark),var(--bg-grey));
+  color:var(--text-light);
 }
+
+/* Navbar */
 header{
-  position:fixed;
-  width:100%;
-  background:#0008;
-  backdrop-filter:blur(10px);
-  padding:15px;
-  z-index:99;
-}
-nav{
   display:flex;
   justify-content:space-between;
   align-items:center;
+  padding:20px 30px;
 }
-nav h1{font-family:Playfair Display;color:var(--gold);}
-nav a{color:white;margin:0 12px;text-decoration:none;}
+
+.logo{
+  font-size:28px;
+  font-weight:700;
+  letter-spacing:2px;
+}
+
+nav a{
+  color:var(--text-grey);
+  text-decoration:none;
+  margin:0 12px;
+  font-weight:500;
+}
+
+nav a:hover{color:var(--text-light);}
+
 .toggle{
-  border:1px solid var(--gold);
-  padding:5px 12px;
+  padding:8px 14px;
+  border:1px solid var(--accent);
+  border-radius:20px;
   background:none;
-  color:var(--gold);
+  color:var(--text-light);
+  cursor:pointer;
 }
+
+/* Hero */
 .hero{
-  height:100vh;
+  min-height:85vh;
   display:flex;
+  flex-direction:column;
   justify-content:center;
   align-items:center;
-  flex-direction:column;
   text-align:center;
 }
-.hero h2{font-size:50px;color:var(--gold);}
-.btn{
-  padding:12px 30px;
-  border:1px solid var(--gold);
-  color:var(--gold);
-  text-decoration:none;
-  border-radius:10px;
+
+.hero h1{
+  font-size:48px;
+  letter-spacing:3px;
+  animation:fade 1.2s ease;
 }
-section{padding:80px 20px;max-width:1200px;margin:auto;}
+
+.hero p{
+  margin:15px 0 30px;
+  color:var(--text-grey);
+}
+
+.btn{
+  padding:14px 34px;
+  border-radius:40px;
+  border:1px solid var(--accent);
+  color:var(--text-light);
+  text-decoration:none;
+  font-weight:600;
+}
+
+.btn:hover{
+  background:var(--accent);
+  color:#000;
+}
+
+/* Art Section */
+section{
+  padding:70px 30px;
+}
+
 .grid{
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
   gap:20px;
 }
+
 .card{
-  background:#020617;
+  background:#111;
+  border-radius:16px;
   padding:20px;
-  border-radius:15px;
   text-align:center;
+  transition:.3s;
 }
-.card img{width:100%;border-radius:10px;}
-.float{
+
+.card:hover{
+  transform:translateY(-6px);
+}
+
+.card img{
+  width:100%;
+  border-radius:12px;
+}
+
+/* Floating WhatsApp */
+.whatsapp{
   position:fixed;
   bottom:20px;
-  width:55px;
-  height:55px;
+  right:20px;
+  background:#25D366;
+  color:#fff;
+  padding:14px 18px;
   border-radius:50%;
-  display:grid;
-  place-items:center;
-  font-size:25px;
-  color:white;
+  font-size:22px;
   text-decoration:none;
 }
-.whatsapp{right:20px;background:#25D366;}
-.insta{right:90px;background:#E1306C;}
+
+/* Footer */
+footer{
+  text-align:center;
+  padding:30px;
+  color:var(--text-grey);
+  font-size:14px;
+}
+
+@keyframes fade{
+  from{opacity:0;transform:translateY(20px)}
+  to{opacity:1;transform:none}
+}
 </style>
 </head>
 
 <body>
 
-<a href="https://wa.me/917378272741" class="float whatsapp">💬</a>
-<a href="https://instagram.com/mystivated66" class="float insta">📷</a>
-
 <header>
-<nav>
-<h1>GLOBAL ART</h1>
-<div>
-<a href="#home">Home</a>
-<a href="#art">Art</a>
-<a href="#contact">Contact</a>
-<button class="toggle" onclick="document.body.classList.toggle('light')">Light/Dark</button>
-</div>
-</nav>
+  <div class="logo">GLOBAL ART</div>
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#art">Art</a>
+    <a href="#contact">Contact</a>
+  </nav>
+  <button class="toggle" onclick="toggleMode()">Light / Dark</button>
 </header>
 
 <div class="hero" id="home">
-<h2>GLOBAL ART</h2>
-<p>Luxury Creative Art Store</p>
-<a class="btn" href="https://wa.me/917378272741">Contact on WhatsApp</a>
+  <h1>GLOBAL ART</h1>
+  <p>Luxury Creative Art Store</p>
+  <a class="btn" href="https://wa.me/917378272741" target="_blank">Contact on WhatsApp</a>
 </div>
 
 <section id="art">
-<h2 style="text-align:center;color:var(--gold)">Art For Sale</h2>
-<div class="grid">
-
-<div class="card">
-<img src="drawing1.jpg">
-<h3>Golden Art</h3>
-<p>₹500</p>
-<a class="btn" href="https://wa.me/917378272741?text=I want Golden Art">Buy</a>
-</div>
-
-<div class="card">
-<img src="drawing2.jpg">
-<h3>Luxury Dream</h3>
-<p>₹700</p>
-<a class="btn" href="https://wa.me/917378272741?text=I want Luxury Dream">Buy</a>
-</div>
-
-<div class="card">
-<img src="drawing3.jpg">
-<h3>Creative Light</h3>
-<p>₹600</p>
-<a class="btn" href="https://wa.me/917378272741?text=I want Creative Light">Buy</a>
-</div>
-
-</div>
+  <h2 style="text-align:center;margin-bottom:30px;">My Artworks</h2>
+  <div class="grid">
+    <div class="card">
+      <img src="https://via.placeholder.com/400x400">
+      <p>Artwork One</p>
+    </div>
+    <div class="card">
+      <img src="https://via.placeholder.com/400x400">
+      <p>Artwork Two</p>
+    </div>
+  </div>
 </section>
 
 <section id="contact">
-<h2 style="text-align:center;color:var(--gold)">Contact</h2>
-<p style="text-align:center">WhatsApp: 7378272741</p>
-<p style="text-align:center">Instagram: mystivated66</p>
+  <h2 style="text-align:center;">Contact</h2>
+  <p style="text-align:center;margin-top:10px;">Instagram: @mystivated</p>
+  <p style="text-align:center;">Phone: 7378272741</p>
 </section>
 
-<footer style="text-align:center;padding:20px">
-© 2026 Global Art
+<footer>
+© 2026 Global Art. All Rights Reserved.
 </footer>
 
+<a class="whatsapp" href="https://wa.me/917378272741" target="_blank">💬</a>
+
+<script>
+function toggleMode(){
+  document.body.classList.toggle("light");
+}
+</script>
+
 </body>
-  </html>
+</html>
