--- a/index.html
+++ b/index.html
@@ -2,161 +2,88 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Global Art — Luxury Art Store</title>
+<title>Global Art | Rehan</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- Google Font -->
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-
 <style>
-:root{
-  --bg-dark:#0b0b0d;
-  --bg-grey:#16161a;
-  --text-light:#f2f2f2;
-  --text-grey:#b3b3b3;
-  --accent:#9e9e9e;
-}
-
-/* Light mode */
-body.light{
-  --bg-dark:#f4f4f4;
-  --bg-grey:#ffffff;
-  --text-light:#111;
-  --text-grey:#444;
-}
-
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-  font-family:'Poppins',sans-serif;
-  scroll-behavior:smooth;
-}
-
 body{
-  background:linear-gradient(180deg,var(--bg-dark),var(--bg-grey));
-  color:var(--text-light);
+  margin:0;
+  font-family: Arial, sans-serif;
+  background:#0f0f0f;
+  color:#e0e0e0;
 }
 
-/* Navbar */
 header{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  padding:20px 30px;
-}
-
-.logo{
-  font-size:28px;
-  font-weight:700;
-  letter-spacing:2px;
-}
-
-nav a{
-  color:var(--text-grey);
-  text-decoration:none;
-  margin:0 12px;
-  font-weight:500;
-}
-
-nav a:hover{color:var(--text-light);}
-
-.toggle{
-  padding:8px 14px;
-  border:1px solid var(--accent);
-  border-radius:20px;
-  background:none;
-  color:var(--text-light);
-  cursor:pointer;
-}
-
-/* Hero */
-.hero{
-  min-height:85vh;
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
+  padding:20px;
   text-align:center;
+  background:#111;
+  border-bottom:1px solid #333;
 }
 
-.hero h1{
-  font-size:48px;
-  letter-spacing:3px;
-  animation:fade 1.2s ease;
+header h1{
+  margin:0;
+  color:#fff;
 }
 
-.hero p{
-  margin:15px 0 30px;
-  color:var(--text-grey);
+header p{
+  color:#aaa;
+  font-size:14px;
 }
 
-.btn{
-  padding:14px 34px;
-  border-radius:40px;
-  border:1px solid var(--accent);
-  color:var(--text-light);
-  text-decoration:none;
-  font-weight:600;
-}
-
-.btn:hover{
-  background:var(--accent);
-  color:#000;
-}
-
-/* Art Section */
-section{
-  padding:70px 30px;
-}
-
-.grid{
+.gallery{
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+  grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
   gap:20px;
+  padding:20px;
 }
 
 .card{
-  background:#111;
-  border-radius:16px;
-  padding:20px;
-  text-align:center;
-  transition:.3s;
-}
-
-.card:hover{
-  transform:translateY(-6px);
+  background:#1a1a1a;
+  border-radius:12px;
+  overflow:hidden;
+  box-shadow:0 0 10px rgba(0,0,0,0.6);
 }
 
 .card img{
   width:100%;
-  border-radius:12px;
+  display:block;
 }
 
-/* Floating WhatsApp */
-.whatsapp{
-  position:fixed;
-  bottom:20px;
-  right:20px;
-  background:#25D366;
+.card .info{
+  padding:15px;
+}
+
+.card h3{
+  margin:0;
   color:#fff;
-  padding:14px 18px;
-  border-radius:50%;
-  font-size:22px;
-  text-decoration:none;
 }
 
-/* Footer */
+.card p{
+  font-size:13px;
+  color:#aaa;
+}
+
+.buy{
+  display:block;
+  margin-top:10px;
+  text-align:center;
+  padding:10px;
+  background:#2e2e2e;
+  color:#fff;
+  text-decoration:none;
+  border-radius:8px;
+}
+
+.buy:hover{
+  background:#444;
+}
+
 footer{
   text-align:center;
-  padding:30px;
-  color:var(--text-grey);
-  font-size:14px;
-}
-
-@keyframes fade{
-  from{opacity:0;transform:translateY(20px)}
-  to{opacity:1;transform:none}
+  padding:15px;
+  background:#111;
+  color:#777;
+  font-size:13px;
 }
 </style>
 </head>
@@ -164,52 +91,53 @@ footer{
 <body>
 
 <header>
-  <div class="logo">GLOBAL ART</div>
-  <nav>
-    <a href="#home">Home</a>
-    <a href="#art">Art</a>
-    <a href="#contact">Contact</a>
-  </nav>
-  <button class="toggle" onclick="toggleMode()">Light / Dark</button>
+  <h1>Global Art</h1>
+  <p>Original Drawings by Rehan</p>
 </header>
 
-<div class="hero" id="home">
-  <h1>GLOBAL ART</h1>
-  <p>Luxury Creative Art Store</p>
-  <a class="btn" href="https://wa.me/917378272741" target="_blank">Contact on WhatsApp</a>
-</div>
+<section class="gallery">
 
-<section id="art">
-  <h2 style="text-align:center;margin-bottom:30px;">My Artworks</h2>
-  <div class="grid">
-    <div class="card">
-      <img src="https://via.placeholder.com/400x400">
-      <p>Artwork One</p>
-    </div>
-    <div class="card">
-      <img src="https://via.placeholder.com/400x400">
-      <p>Artwork Two</p>
+  <div class="card">
+    <img src="art1.jpg">
+    <div class="info">
+      <h3>Anime Drawing</h3>
+      <p>Handmade artwork</p>
+      <a class="buy" href="https://wa.me/917378272741">Buy on WhatsApp</a>
     </div>
   </div>
-</section>
 
-<section id="contact">
-  <h2 style="text-align:center;">Contact</h2>
-  <p style="text-align:center;margin-top:10px;">Instagram: @mystivated</p>
-  <p style="text-align:center;">Phone: 7378272741</p>
+  <div class="card">
+    <img src="art2.jpg">
+    <div class="info">
+      <h3>Cartoon Art</h3>
+      <p>Color drawing</p>
+      <a class="buy" href="https://wa.me/917378272741">Buy on WhatsApp</a>
+    </div>
+  </div>
+
+  <div class="card">
+    <img src="art3.jpg">
+    <div class="info">
+      <h3>Pencil Sketch</h3>
+      <p>Detailed sketch art</p>
+      <a class="buy" href="https://wa.me/917378272741">Buy on WhatsApp</a>
+    </div>
+  </div>
+
+  <div class="card">
+    <img src="art4.jpg">
+    <div class="info">
+      <h3>Dragon Ball Art</h3>
+      <p>Anime fan art</p>
+      <a class="buy" href="https://wa.me/917378272741">Buy on WhatsApp</a>
+    </div>
+  </div>
+
 </section>
 
 <footer>
-© 2026 Global Art. All Rights Reserved.
+  © 2026 Global Art | Designed by Rehan
 </footer>
 
-<a class="whatsapp" href="https://wa.me/917378272741" target="_blank">💬</a>
-
-<script>
-function toggleMode(){
-  document.body.classList.toggle("light");
-}
-</script>
-
 </body>
-</html>
+  </html>
